# guide

./: .envrc  .gitignore  CLAUDE.md  README.md  _.md  code.md  config.md  exemplar.md  frame.md  gemini  justfile  mission.yaml  pyproject.toml  pyrightconfig.json  stack.md  todo.md  tools.md
.claude/homunculus/: observations.jsonl
.netlify/: netlify.toml
.serena/: project.yml
configs/: .markdownlint.json  biome.json  pyrightconfig.json  ruff.toml
configs/claude/: settings.json
configs/vscode/: settings.json
docs/: meta.md
extensions/: README.md  mkdocs.yml  pyproject.toml
extensions/docs/: FletNodeflow.md  index.md
extensions/examples/flet_nodeflow_example/: pyproject.toml
extensions/examples/flet_nodeflow_example/src/: main.py
extensions/src/flet_nodeflow/: __init__.py  flet_nodeflow.py
extensions/src/flet_nodeflow.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
extensions/src/flutter/flet_nodeflow/: README.md  pubspec.yaml
extensions/src/flutter/flet_nodeflow/lib/: flet_nodeflow.dart
extensions/src/flutter/flet_nodeflow/lib/src/: flet_nodeflow.dart
guide/: __main__.py  app.py  datasets.py  design.py  lang.py  llm.py  loader.py  model.py  paths.py  utils.py
guide/api/cli/: __init__.py  check.py  drift.py  hooks.py  portal.py  sync.py  watch.py
guide/log/: __init__.py  py.py
guide/log/py/: logbot.py
guide/log/ts/: __init__.py
guide/log/ts/logbot/: logger.ts
guide/logger/: __init__.py
guide/logger/py/: __init__.py  logger.py
guide/logger/ts/: INTEGRATION.md  __init__.py
guide/logger/ts/logbot/: README.md  instrumentor.ts  types.ts
guide/sketcher/: entity.py  tree.py  utils.py
guide/tester/: py.py  ts.py
guides/: index.md
guides/commands/: gen-art.md  gen-comm.md  gen-limn.md  gen-mood.md  gen-report.md  map-md-to-yaml.md  map-pdf-to-md.md
guides/configs/: .markdownlint.json  biome.json  pyrightconfig.json  ruff.toml
guides/configs/claude/: CLAUDE.md  settings.json
guides/configs/claude/commands/: add-gist.md  add-pdf.md  dsm.md  impeccable.md  qualia.md  thoughtfully.md
guides/configs/claude/docs/: CLAUDE.backup.md  dev.browser.md  hooks.md
guides/configs/claude/hooks/: README.md  on-change.sh  utils.sh
guides/configs/claude/rules/: code-style.md  css-style.md  db-style.md  ml-style.md  os-style.md  py-style.md  rs-style.md  sql-style.md  test-style.md  ts-style.md  ui-style.md
guides/configs/claude/skills/codebase-memory-exploring/: SKILL.md
guides/configs/claude/skills/codebase-memory-quality/: SKILL.md
guides/configs/claude/skills/codebase-memory-reference/: SKILL.md
guides/configs/claude/skills/codebase-memory-tracing/: SKILL.md
guides/configs/claude/skills/discover/: SKILL.md
guides/configs/claude/skills/graph-view/: SKILL.md
guides/configs/claude/skills/rust-analyzer/: SKILL.md
guides/configs/claude/skills/rust-style/: SKILL.md
guides/configs/vscode/: settings.json
guides/preferences/: code.md  ml.md  prose.md  py.md  ts.md
guides/scripts/: cleanup-mac.sh
guides/style/: spec.schema.yaml
guides/style/brief/: 01-corporate-hallway.spec.yaml  02-light-dashboard.spec.yaml  03-document-signing.spec.yaml  04-structured-documents.spec.yaml  mood.css  mood.yaml
guides/style/comms/: cv.css  deck.css  doc.css  poster.css
guides/style/moods/: brief.css
guides/styles/: deck.css  doc.css
guides/styles/moods/: style.schema.yaml
proposals/: evolve.md  self-healing.md
qxgo/: SOLUTION.md  agent-test.md  go.mod  go.sum  main.go
qxgo/.claude/: settings.json
qxgo/internal/config/: config.go
qxgo/internal/hook/: hook.go  response.go
qxgo/internal/ui/: simple.go  styles.go  tui.go
qxgo/internal/validator/: linters.go  markdown.go  validator.go
qxgo/test-examples/: test-markdown-bold.json  test-valid-formatted-ts.json  test-valid-md.json  test-valid-ts.json
scripts/: guide.md
scripts/hooks/: README.md  on-change.sh  utils.sh
specials/: README.md
specials/gen-diagram/: .mcp.json
specials/gen-diagram/.claude/agents/: gen-diagram.md
specials/gen-diagram/architecture/: model.c4
src/guide/: __main__.py  loader.py  mission.py  signal.py  utils.py
src/guide/app/: __main__.py  ctx.py  errors.py
src/guide/app/pages/: __init__.py  mission.py
src/guide/app/widgets/: __init__.py  design.py  header.py  health.py  metrics.py  signal.py  utils.py
src/guide/logger/: __init__.py
src/guide/logger/py/: hook.py  instrument.py
src/guide/sketcher/: __init__.py  base.py  dependency.py
src/guide/tester/: __init__.py  py.py  ts.py
style/: README.md  align.sh  code.md  mission.md  ml.md  python.md  tokens.css
style/_schema/: spec.schema.yaml
style/commands/: analyze.md  compose.md  export.md  gen-art.md  gen-moodboard-exemplars.md
style/deck/: corporate.css  modern.css
style/default/: style.yaml
style/docs/: base.css  cv.css  nav.js  report.css
style/flash/: 01-mustard-chair-geometry.spec.yaml  02-lamp-sage-negative.spec.yaml  03-concrete-blush-industrial.spec.yaml  04-stendig-calendar-desk.spec.yaml  05-megaphone-orange-wry.spec.yaml  style.yaml  tokens.css
style/noir/: style.yaml
style/noir-urban/: 01-chicago-canyon-wet.spec.yaml  02-tokyo-tower-reflection.spec.yaml  03-empty-street-neon.spec.yaml  04-tokyo-alley-lanterns.spec.yaml  style.yaml  tokens.css
tests/: test_drift.py
(+8 files in other folders)
