[project]
name = "guide"
version = "0.1.0"
description = "Declarative purpose reification system"
readme = "README.md"
authors = [
    { name = "xmkqv", email = "m@qxotk.ai" }
]
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
    "pytest>=8.0",
    "attrs>=25.0",
    "numpy>=2.0.0",
    "returns>=0.24.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "structlog>=24.0.0",
    "pip>=24.0",
    "expression[pydantic]>=5.0.0",
    "watchfiles>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest-reportlog>=0.4.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]

[project.scripts]
guide = "guide.__main__:main"

[tool.pytest.ini_options]
addopts = "--report-log=results/results.jsonl"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
prerelease = "allow"

[tool.ruff]
extend = "configs/ruff.toml"

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["T201"]  # Allow print in CLI scripts
