[project]
name = "guide"
version = "0.1.0"
description = "Declarative purpose reification system"
readme = "README.md"
authors = [
    { name = "xmkqv", email = "m@qxotk.ai" }
]
requires-python = ">=3.13"
dependencies = [
    "logbot @ file:///${PROJECT_ROOT}/../logbot",
    "pyyaml>=6.0",
    "pytest>=8.0",
    "attrs>=25.0",
    "numpy>=2.0.0",
    "returns>=0.24.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pip>=24.0",
    "expression[pydantic]>=5.0.0",
    "watchfiles>=1.1.1",
    "tyro>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-reportlog>=0.4.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]

[project.scripts]
guide = "guide.api.cli:main"

[tool.pytest.ini_options]
addopts = "--report-log=results/results.jsonl"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
extend = "guides/configs/ruff.toml"

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["T201"]  # Allow print in CLI scripts
